# TestCaseDesignEngine

./: build_dev.bat  pyproject.toml
doc/: glossary.md  requirement_pseudocode_format_python.md
src/tda_engine/: __init__.py  __main__.py  main.py  numset.py  util.py
tests/: req.txt  req1.txt  test_numset.py  test_req_init_01.py
